# quic-teec

./: CMakeLists.txt  CMakeToolchain.txt  CODING-STYLE.md  CONTRIBUTING.md  Makefile.am  README.md  configure.ac  gitcompile
libqcomtee/: CMakeLists.txt  Makefile.am  qcomtee.pc.in
libqcomtee/cmake/: FindQCBOR.cmake
libqcomtee/inc/: credentials.h  credentials_obj.h  qcom_tee_api.h  qcom_tee_defs.h  qcom_tee_obj.h  qcom_tee_supp.h
libqcomtee/inc/utils/: utils.h
libqcomtee/include/: qcomtee_errno.h  qcomtee_object.h  qcomtee_object_types.h
libqcomtee/src/: qcom_tee_api.c  qcom_tee_supp.c  qcomtee_object.c  qcomtee_object_private.h
libqcomtee/src/linux/: tee.h
libqcomtee/src/objects/: callback_obj.c  credentials_obj.c  mem_obj.c  remote_obj.c  root_obj.c
libqcomtee/src/utils/: credentials.c
test/qcomtee_clients/: Makefile.am  qcom_tee_client.c  qcom_tee_client.h
tests/: CMakeLists.txt  README.md  common.c  diagnostics.c  main.c  ta_load.c  tests_private.h
tests/ta/smcinvoke_skeleton_ta/: CSMCIExample.c  smci_ta_main.c  smcinvoke_skeleton_ta64.mbn
